<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="minute_options">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="hour_options">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="app_name">WilliamsScheduler</string>
    <string name="schedule_title">Today\'s Schedule</string>
    <string name="event_title">Title of Event</string>
    <string name="enter_event_title">Enter the name of the event</string>
    <string name="event_time">Start Time</string>
    <string name="event_duration">Duration</string>
    <string name="event_description">Description</string>
    <string name="event_description_hint">Type a short description of the event</string>
    <string name="time_picker_title">Time of Event:</string>
    <string name="action_settings">Settings</string>
    <string name="to_do_activity_name">To-Do Item</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_clear_screen">Clear Screen</string>

</resources>